# riskflow

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  agent.py.md  coverage-baseline.json  docker-compose.override.yml  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: code-reviewer.md  doc-gardener.md  harness-auditor.md
.claude/hooks/: check-boundaries.sh  check-coverage-delta.sh  check-runtime-deps.sh  docs-reminder.sh  enforce-create-pr.sh  post-edit-lint.sh  post-failure-context.sh  post-rename-check.sh  pre-commit.sh  protect-files.sh  security-scan.sh
.claude/rules/: operating-principles.md  reinsurance.md  testing.md
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  release.yml  security-scan.yml
docs/: index.md  presentation-harness-engineering.md  scaling-roadmap.md  testing-strategy.md
docs/explanation/: confidence-scores.md  corrections.md  features.md  how-mapping-works.md  scaling-architecture.md
docs/how-to/: async-upload.md  configure-scaling.md  correct-mappings.md  custom-schema.md  debug-with-logging.md  multi-sheet-excel.md  upload-and-map.md  use-the-gui.md
docs/presentations/: 2026-03-26-harness-engineering-part1.md  2026-03-26-harness-engineering-part2.md  2026-03-26-harness-engineering.md  2026-03-30-performance-testing-infrastructure.md  2026-03-31-flexible-date-parsing.md  2026-04-02-harness-improvements-and-date-format-detection.md  2026-04-02-interactive-session-api-and-harness-completion.md  2026-04-04-openapi-spec-and-api-versioning.md  2026-04-06-migration-cleanup-and-test-coverage.md  2026-04-08-test-coverage-tracking.md  2026-04-12-14-scaling-observability-quality.md  2026-04-12-observability-file-listing-docs.md  2026-04-19-20-async-redis-and-scaling.md  2026-04-19-harness-audit-and-release-skill.md
docs/reference/: api.md  configuration.md  errors.md  openapi.md  schema.md  versioning.md
docs/tutorials/: first-upload.md
gui/: Dockerfile  api_client.py  app.py
schemas/: default.yaml  marine_cargo.yaml
src/entrypoint/: main.py
tests/benchmark/: conftest.py  test_benchmarks.py  test_endpoint_guardrails.py  test_memory_endurance.py  test_perf_guardrails.py
tests/contract/: conftest.py  test_api_contracts.py
tests/e2e/: test_groq_smoke.py
tests/fixtures/: confidence_test.csv  confidence_variance_test.csv  create_test_spreadsheets.py  marine_cargo_bordereaux.xlsx  multi_sheet_bordereaux.xlsx  reinsurance_bordereaux_messy.xlsx  sample_bordereaux.csv  sample_marine_cargo.csv
tests/integration/: test_e2e.py  test_fixture_upload.py  test_redis_concurrency.py  test_redis_real.py  test_request_id_middleware.py
tests/load/: locustfile.py  test_locust_ci.py
tests/scale/: test_event_loop_not_starved.py  test_jobs_latency_budget.py
tests/smoke/: test_groq_smoke.py
tests/unit/: test_api_change_detection.py  test_api_client.py  test_async_background_tasks.py  test_async_upload.py  test_bump_version.py  test_cache_adapter.py  test_cache_key_fingerprint.py  test_correction_cache_adapter.py  test_correction_model.py  test_coverage_report.py  test_date_coercion.py  test_date_format.py  test_dynamic_schema.py  test_entrypoint.py  test_equivalence.py  test_errors.py  test_export_openapi.py  test_hexagonal_linter.py  test_http_adapter.py  test_imports.py  test_ingestor_adapter.py  test_job_model.py  test_job_store.py  test_logging.py  test_mapping_service.py  test_marine_cargo_schema.py  test_ports.py  test_redis_job_store.py  test_release_notes.py  test_row_validation.py  test_runtime_deps.py  test_schema.py  test_schema_aware_prompt.py  (+10 more)
tools/: bump_version.py  check_api_changes.py  coverage_report.py  export_openapi.py  hexagonal_linter.py  release_notes.py
(+32 files in other folders)
