[project]
name = "riskflow"
version = "0.3.0"
description = "Reinsurance data mapper — automates mapping of Bordereaux spreadsheets to a standardized schema using SLMs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "fastexcel>=0.19.0",
    "openai>=2.29.0",
    "openpyxl>=3.1.5",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "starlette>=1.0.0",
    "structlog>=25.5.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "diff-cover>=10.2.0",
    "httpx>=0.28.1",
    "locust>=2.43.3",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.7",
    "streamlit>=1.55.0",
    "testcontainers>=4.14.2",
    "types-openpyxl>=3.1.5.20260322",
    "types-python-dateutil>=2.9.0.20260323",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "unit: isolated component tests, all dependencies mocked.",
    "integration: full pipeline tests with mocked SLM. Proves components connect.",
    "e2e: real external APIs, real data, nothing mocked. Requires GROQ_API_KEY.",
    "benchmark: performance benchmarks for hot-path functions.",
    "perf_guardrail: performance regression guardrail tests with time budgets.",
    "contract: consumer-driven contract tests for internal API boundaries.",
    "container: tests requiring Docker (testcontainers). Skipped when Docker unavailable.",
    "load: load/stress tests using Locust runner. test_locust_ci.py runs in CI; locustfile.py is manual.",
]
# pytest-xdist: parallel test execution
# Usage: uv run pytest -n auto tests/unit/    (auto-detect CPU cores)
#        uv run pytest -n 4 tests/unit/        (explicit 4 workers)
# Note: benchmarks must run single-process (pytest-benchmark + xdist conflict)
#        uv run pytest tests/benchmark/ -p no:xdist

[tool.pytest-benchmark]
# Minimum rounds for statistical reliability
min_rounds = 5
# Disable benchmarks by default in normal test runs
disable_gc = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.coverage.json]
output = "reports/coverage.json"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "C4"]
ignore = ["B008", "E501", "N806", "B023", "SIM102", "SIM105"]
